# tvdaemon

./: .clang_complete  .gitignore  .gitmodules  .lvimrc  AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  build.sh  configure  configure.ac
.tesserae/: status  template
cli/: tvd
cli/patches/: 0001-confirm-exit-flag.patch  0002-Do-not-remove-default-items.patch
debian/: changelog  control  default  init  rules  tvdaemon.postinst  tvdaemon.postrm
html/: camclients.html  camclients.js  channels.html  channels.js  epg.css  epg.html  epg.js  index.css  index.html  index.js  recorder.css  recorder.html  recorder.js  services.css  services.html  services.js  source.html  transponders.css  transponders.html  transponders.js
html/css/: tvdaemon.css
html/jqwidgets/: jqxbuttongroup.js  jqxbuttons.js  jqxcolorpicker.js  jqxcombobox.js  jqxdatetimeinput.js  jqxdocking.js  jqxdragdrop.js  jqxexpander.js  jqxgauge.js  jqxgrid.aggregates.js  jqxgrid.columnsresize.js  jqxgrid.filter.js  jqxgrid.grouping.js  jqxknockout.js  jqxmaskedinput.js  jqxmenu.js  jqxnavigationbar.js  jqxnumberinput.js  jqxrating.js  jqxwindow.js
html/scripts/: demofunctions.js  generatedata.js  knockout-2.1.0.js  qunit-git.js  tvdaemon.js
html/scripts/lib/: jquery-ui.js
html/style/: desktop.css  jquery-ui.css  mobile.css  tvdaemon.css
include/: Activity.h  Activity_Record.h  Activity_Scan.h  Activity_Stream.h  Activity_UpdateEPG.h  Adapter.h  Avahi_Client.h  CAMClient.h  CAMClientHandler.h  Channel.h  ConfigObject.h  Daemon.h  Event.h  Frame.h  Frontend.h  Frontend_ATSC.h  Frontend_DVBC.h  Frontend_DVBS.h  Frontend_DVBT.h  Frontend_HDHR.h  HDHomerun_Client.h  HTTPServer.h  HttpServer.h  JsonObject.h  Log.h  MPEGTS.h  Matroska.h  Port.h  RPCObject.h  Recorder.h  RingBuffer.h  Server_Avahi.h  Service.h  SocketHandler.h  Source.h  Stream.h  StreamingHandler.h  TVDaemon.h  Thread.h  Transponder.h  (+6 more)
lib/: Activity.cpp  Activity_Record.cpp  Activity_Scan.cpp  Activity_Stream.cpp  Activity_UpdateEPG.cpp  Adapter.cpp  Avahi_Client.cpp  CAMClient.cpp  CAMClientHandler.cpp  Channel.cpp  ConfigObject.cpp  Daemon.cpp  Event.cpp  Frame.cpp  Frontend.cpp  Frontend_ATSC.cpp  Frontend_DVBC.cpp  Frontend_DVBS.cpp  Frontend_DVBT.cpp  Frontend_HDHR.cpp  HDHomerun_Client.cpp  HTTPServer.cpp  HttpServer.cpp  Log.cpp  MPEGTS.cpp  Makefile.am  Makefile.in  Matroska.cpp  Port.cpp  RPCObject.cpp  Recorder.cpp  RingBuffer.cpp  Server_Avahi.cpp  Service.cpp  SocketHandler.cpp  Source.cpp  Stream.cpp  StreamingHandler.cpp  TVDaemon.cpp  Thread.cpp  (+6 more)
patches/: 0001-build-inside-tvdaemon.patch  0001-build-with-tvdaemon.patch  0001-fix-reading-multisection-tables.patch  0001-libdvbv5-ATSC-VCT-table-support.patch  0001-libdvbv5-EIT-parser.patch  0001-libdvbv5-Fix-parsing-ATSC-scanfiles.patch  0001-table-tests.patch  0001-v4l-lvimrc.patch  0002-Fix-dvb-file-USER-CMD.patch  0002-libdvbv5-ATSC-VCT-table-support.patch  0002-libdvbv5-allow-more-options-in-set_pesfilter.patch  0002-libdvbv5-cleanup-logging-some-memory-checks.patch  0002-libdvbv5-fix-reading-multisection-tables.patch  0002-libdvbv5-improve-DVB-header-handling.patch  0002-libdvbv5-reunite-atsc_table_header-and-dvb_table_hea.patch  0002-mpeg-elementary-stream-parsers.patch  0002-v4l-lvimrc.patch  0003-fix-hexdump.patch  0003-libdvbv5-ATSC-VCT-table-support.patch  0003-libdvbv5-cleanup-logging-some-memory-checks.patch  0003-libdvbv5-dvb_dmx_open-nonblocking.patch  0003-libdvbv5-fix-asprintf-compile-warning-in-dvbv5-scan.patch  0003-libdvbv5-fix-deadlock-on-missing-table-sections.patch  0003-libdvbv5-generators-for-SDT-desc_service-and-mpeg_ts.patch  0003-libdvbv5-mpeg-elementary-stream-parsers.patch  0003-libdvbv5-service-location-descriptor-support.patch  0003-mpeg-elementary-stream-parsers.patch  0003-use-dvb_log-for-printing-params.patch  0004-allow-anonymous-unions-with-gcc-4.5.5.patch  0004-fix-reading-multisection-tables.patch  0004-libdvbv5-VCT-table-cleanup.patch  0004-libdvbv5-added-dmx-stop-function.patch  0004-libdvbv5-check-memory-in-descriptor-parsing.patch  0004-libdvbv5-fix-EIT-parsing.patch  0004-libdvbv5-fix-deadlock-on-missing-table-sections.patch  0004-libdvbv5-generators-for-PAT-and-PMT.patch  0004-libdvbv5-generators-for-SDT-desc_service-and-mpeg_ts.patch  0004-libdvbv5-make-crc32-public.patch  0004-libdvbv5-mpeg-elementary-stream-parsers.patch  0004-table-parsing.patch  (+154 more)
src/: Makefile.am  Makefile.in  tvdaemon.cpp
www/: adapter.html  adapter.js  app.js  channels.css  channels.html  channels.js  epg.html  epg.js  gui.css  gui.html  gui.js  index.css  index.html  recorder.js  service.html  service.js  services.html  services.js  source.html  source.js  transponder.html  transponder.js  transponders.js  tvdaemon.html  tvdaemon.js
www/app/controller/: Main.js
www/app/model/: Restaurant.js  Source.js
www/app/store/: Companies.js  Examples.js  Restaurants.js  Sources.js  States.js  TreeStore.js
www/app/view/: Header.js  List.js  Viewport.js
www/app/view/examples/: Example.js  PanelExample.js  Sources.js
www/app/view/examples/forms/: Contact.js  Login.js  Register.js
www/app/view/examples/grids/: BasicGrid.js  GroupedGrid.js  GroupedHeaderGrid.js  LockedGrid.js
www/app/view/examples/panels/: BasicPanel.js  FramedPanel.js
www/app/view/examples/tabs/: BasicTabs.js  FramedTabs.js  IconTabs.js  TitledTabPanels.js
www/app/view/examples/toolbars/: BasicToolbar.js  (+1 more)
www/css/: tvdaemon.css
www/jqwidgets/: jqx-all.js  jqxcalendar.js  jqxchart.js  jqxcheckbox.js  jqxcore.js  jqxdata.export.js  jqxdata.js  jqxdockpanel.js  jqxdropdownbutton.js  jqxdropdownlist.js  jqxgrid.columnsreorder.js  jqxgrid.edit.js  jqxgrid.export.js  jqxgrid.js  jqxgrid.pager.js  jqxgrid.selection.js  jqxgrid.sort.js  jqxgrid.storage.js  jqxlistbox.js  jqxlistmenu.js  jqxpanel.js  jqxpopup.js  jqxprogressbar.js  jqxradiobutton.js  jqxscrollbar.js  jqxscrollview.js  jqxslider.js  jqxsplitter.js  jqxswitchbutton.js  jqxtabs.js  jqxtooltip.js  jqxtouch.js  jqxtree.js
www/scripts/: default.js  format.js  gettheme.js  jquery-1.7.2.min.js  tvdaemon.js
(+2 files in other folders)
