ACLOCAL_AMFLAGS = -I m4

SUBDIRS = tsdecrypt lib src #po
noinst_HEADERS = include

tvdaemondir = $(datadir)/tvdaemon
nobase_dist_tvdaemon_DATA = \
  html/index.css \
  html/index.html \
  html/index.js \
  html/transponders.css \
  html/transponders.html \
  html/transponders.js \
  html/services.css \
  html/services.html \
  html/services.js \
  html/channels.css \
  html/channels.html \
  html/channels.js \
  html/epg.css \
  html/epg.html \
  html/epg.js \
  html/recorder.css \
  html/recorder.html \
  html/recorder.js \
  html/style/tvdaemon.css \
  html/scripts/tvdaemon.js \
  html/images/antenna-cable.smal.png \
  html/images/antenna-icon.png \
  html/images/antenna-oldstyle.png \
  html/images/pci-icon.png \
  html/images/TVDeamon_large_configure.png \
  html/images/TVDeamon_large_promt.png \
  html/images/TVDeamon_large_users.png \
  html/images/TVDeamon_small.png \
  html/images/usb-icon.png \
  html/favicon.ico \
  html/scripts/lib/jquery.js \
  html/scripts/lib/jquery-1.11.0.min.js
